# MoBI_plugin

./: .gitignore  .pre-commit-config.yaml  Experiment.xlsx  LICENSE  ProcessGhentImages (1).ipynb  README.md  _widget.py  _widget_2.py  mbipyClement.ipynb  need.txt  pyproject.toml  requirements.txt  test.ipynb
napari_env/: pyvenv.cfg
napari_env/Scripts/: activate  activate.bat  numba
src/mobi_plugin/: __init__.py  _reader.py  _widget.py  _widgets.py  _writer.py  napari.yaml
src/mobi_plugin/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/mobi_plugin/popcorn/: LCS_DF.py  LCS_DirDF.py  ReverseFlow_LCS.py  XSVT.py  fourier_integration.py  ls_integration.py  speckle_matching.py
src/mobi_plugin/readers/: _edf_reader.py  _hdf5_reader.py  _tdf_reader.py
src/mobi_plugin/widgets/: LCS_DirDF.py  _lcs.py  _processing.py  _section.py  _utils.py  _widget_2.py
temporary_trash/: _tdf_reader.py
